--- a/.github/workflows/updateSubmodulesDaily.yml
+++ b/.github/workflows/updateSubmodulesDaily.yml
@@ -14,6 +14,7 @@ name: "Automatic Submodules Update"
 on:
   schedule:
     - cron: "0 7 * * *"
+  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
