--- a/.github/workflows/updateSubmodulesDaily.yml
+++ b/.github/workflows/updateSubmodulesDaily.yml
@@ -19,7 +19,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  sync:
     # The type of runner that the job will run on
     name: 'Submodules Sync'
     runs-on: ubuntu-latest
