--- a/.github/workflows/updateSubmodulesDaily.yml
+++ b/.github/workflows/updateSubmodulesDaily.yml
@@ -18,9 +18,8 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+
   sync:
-    # The type of runner that the job will run on
     name: 'Submodules Sync'
     runs-on: ubuntu-latest
     
@@ -34,7 +33,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          token: ${{ secrets.CI_TOKEN }}
+          # https://github.com/actions/checkout/issues/298#issuecomment-820748989
+          token: ${{ secrets.MY_TOKEN || github.token }}
           submodules: true
 
       - name: Git Submodule Update
