--- a/.github/workflows/updateSubmodulesDaily.yml
+++ b/.github/workflows/updateSubmodulesDaily.yml
@@ -10,7 +10,7 @@
 
 # This is a basic workflow to help you get started with Actions
 
-name: "Automatic Submodules Update"
+name: "automatic Submodules Update"
 
 # Controls when the workflow will run
 on:
